<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87D6CF">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/blue_green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/blue_green"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Grid Layout -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_margin="16dp">

        <!-- Find Doctor Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/find_doctor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/blue_green"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/doctor"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/doctors" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctors"
                    android:textAlignment="center"
                    android:layout_marginStart="60dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Appointments Card -->
        <!-- Appointments Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/appointments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/blue_green"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/app"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/appointments" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointments"
                    android:textAlignment="center"
                    android:layout_marginStart="30dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- User Profile Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/blue_green"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/user"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/user_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginStart="40dp"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Log Out Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/blue_green"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/logout"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/log_out" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginStart="50dp"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </GridLayout>
</RelativeLayout>
